--- a/about.html
+++ b/about.html
@@ -2,10 +2,10 @@
 <html lang="en-US">
   <meta charset="utf-8">
   <title>Redirecting&hellip;</title>
-  <link rel="canonical" href="https://lingzhiyumkt.github.io/">
-  <script>location="https://lingzhiyumkt.github.io/"</script>
-  <meta http-equiv="refresh" content="0; url=https://lingzhiyumkt.github.io/">
+  <link rel="canonical" href="https://lingzhi-yu.github.io/">
+  <script>location="https://lingzhi-yu.github.io/"</script>
+  <meta http-equiv="refresh" content="0; url=https://lingzhi-yu.github.io/">
   <meta name="robots" content="noindex">
   <h1>Redirecting&hellip;</h1>
-  <a href="https://lingzhiyumkt.github.io/">Click here if you are not redirected.</a>
+  <a href="https://lingzhi-yu.github.io/">Click here if you are not redirected.</a>
 </html>
