--- a/page-archive/index.html
+++ b/page-archive/index.html
@@ -19,11 +19,11 @@
 
 
 
-<title>Page Archive - Lingzhi Yu</title>
+<title>Page Archive</title>
 
 
 
-<meta name="description" content="PhD Student in Marketing, UT Austin">
+<meta name="description" content="LingHi Yu Web">
 
 
 
@@ -65,7 +65,7 @@
 
 <!-- Open Graph protocol data (https://ogp.me/), used by social media -->
 <meta property="og:locale" content="en-US">
-<meta property="og:site_name" content="Lingzhi Yu"> 
+<meta property="og:site_name" content=""> 
 <meta property="og:title" content="Page Archive">
 
 
@@ -78,7 +78,7 @@
 
 <!-- end Open Graph protocol -->
 
-<link href="https://lingzhi-yu.github.io/feed.xml" type="application/atom+xml" rel="alternate" title="Lingzhi Yu Feed">
+<link href="https://lingzhi-yu.github.io/feed.xml" type="application/atom+xml" rel="alternate" title=" Feed">
 
 <!-- http://t.co/dKP3o1e -->
 <meta name="HandheldFriendly" content="True">
@@ -126,7 +126,7 @@
       <nav id="site-nav" class="greedy-nav">
         <button><div class="navicon"></div></button>
         <ul class="visible-links">
-          <li class="masthead__menu-item masthead__menu-item--lg persist"><a href="https://lingzhi-yu.github.io/">Lingzhi Yu</a></li>
+          <li class="masthead__menu-item masthead__menu-item--lg persist"><a href="https://lingzhi-yu.github.io/"></a></li>
           
             
             <li class="masthead__menu-item"><a href="https://lingzhi-yu.github.io/publications/">Publications</a></li>
