--- a/archive-layout-with-content/index.html
+++ b/archive-layout-with-content/index.html
@@ -19,7 +19,7 @@
 
 
 
-<title>Archive Layout with Content</title>
+<title>Archive Layout with Content  Home</title>
 
 
 
@@ -65,7 +65,7 @@
 
 <!-- Open Graph protocol data (https://ogp.me/), used by social media -->
 <meta property="og:locale" content="en-US">
-<meta property="og:site_name" content=""> 
+<meta property="og:site_name" content="Home"> 
 <meta property="og:title" content="Archive Layout with Content">
 
 
@@ -78,7 +78,7 @@
 
 <!-- end Open Graph protocol -->
 
-<link href="https://lingzhi-yu.github.io/feed.xml" type="application/atom+xml" rel="alternate" title=" Feed">
+<link href="https://lingzhi-yu.github.io/feed.xml" type="application/atom+xml" rel="alternate" title="Home Feed">
 
 <!-- http://t.co/dKP3o1e -->
 <meta name="HandheldFriendly" content="True">
@@ -126,7 +126,7 @@
       <nav id="site-nav" class="greedy-nav">
         <button><div class="navicon"></div></button>
         <ul class="visible-links">
-          <li class="masthead__menu-item masthead__menu-item--lg persist"><a href="https://lingzhi-yu.github.io/"></a></li>
+          <li class="masthead__menu-item masthead__menu-item--lg persist"><a href="https://lingzhi-yu.github.io/">Home</a></li>
           
             
             <li class="masthead__menu-item"><a href="https://lingzhi-yu.github.io/publications/">Publications</a></li>
