deploy: dbe742590c7027b72ea2c2e08c1aa9a53d028339

--- a/sitemap/index.html
+++ b/sitemap/index.html
@@ -1510,7 +1510,11 @@
       <footer>
         <!-- start custom footer snippets -->
 
-<a href="/sitemap/">Sitemap</a>
+<hr>
+<p style="text-align:center; font-size: 0.9em;">
+  © 2025 Lingzhi Yu · UT Austin <br>
+  <a href="mailto:Lingzhi.Yu@mccombs.utexas.edu">Email</a> |
+</p>
 
 <!-- Support for MatJax -->
 <script defer src="https://cdnjs.cloudflare.com/polyfill/v3/polyfill.min.js?features=es6"></script>
