--- a/markdown/index.html
+++ b/markdown/index.html
@@ -926,7 +926,7 @@ graph TD;
 </script>
 
         <div class="page__footer-copyright">
-  <p>© 2025 Lingzhi Yu · UT Austin</p>
+  <p>© 2025 Lingzhi Yu · Lingzhi.Yu@mccombs.utexas.edu</p>
   <p>Last updated: 2025-09-20</p>
 </div>
 
