--- a/year-archive/index.html
+++ b/year-archive/index.html
@@ -537,7 +537,7 @@
 </script>
 
         <div class="page__footer-copyright">
-  <p>© 2025 Lingzhi Yu · UT Austin</p>
+  <p>© 2025 Lingzhi Yu · Lingzhi.Yu@mccombs.utexas.edu</p>
   <p>Last updated: 2025-09-20</p>
 </div>
 
