--- a/markdown/index.html
+++ b/markdown/index.html
@@ -181,7 +181,7 @@
   <div class="author__content">
     <h3 class="author__name">Lingzhi Yu</h3>
     
-    <p class="author__bio">PhD Student in Marketing at McCombs School of Business UT Austin</p>
+    <p class="author__bio">PhD Student in Marketing at McCombs School of Business, UT Austin</p>
   </div>
 
   <div class="author__urls-wrapper">
