--- a/index.html
+++ b/index.html
@@ -274,8 +274,7 @@
 
 <p>My research examines how consumers process and act on information in technology-mediated environments, with a focus on gaps between intentions and actions. I study contexts such as feedback seeking, news sharing, and livestream commerce to understand when and why people mispredict their own reactions and how technology—from generative AI to real-time platforms—can reshape these dynamics. I also explore how human–AI relationships and social norms influence adoption and decision-making.</p>
 
-<p>Broadly, my work aims to advance theory on consumer information use while offering insights into how firms can design communication, technologies, and marketplaces that better support consumer well-being.
-<img width="7734" height="261" alt="image" src="https://github.com/user-attachments/assets/0ad0662e-71d9-4d30-8407-0492ce38f36b" /></p>
+<p>Broadly, my work aims to advance theory on consumer information use while offering insights into how firms can design communication, technologies, and marketplaces that better support consumer well-being.</p>
 
 
 
