--- a/_pages/research.html
+++ b/_pages/research.html
@@ -1,7 +1,30 @@
-_pages/
-   research.html   <-- template (what you already have)
-_research/
-   2024-robot-lonely.md
-   2024-sharing-happiness.md
-   2025-honesty-gap.md
-   ...more items
+---
+title: "Research"
+permalink: /research/
+layout: page
+author_profile: true
+entries_layout: list
+show_excerpts: true
+---
+
+<h2 id="publications">Publications</h2>
+{% assign pubs = site.research | where_exp: "item", "item.categories contains 'publications'" | sort: "date" | reverse %}
+{% for post in pubs %}
+  {% include archive-single.html %}
+{% endfor %}
+
+<hr>
+
+<h2 id="working-papers">Working Papers</h2>
+{% assign wps = site.research | where_exp: "item", "item.categories contains 'working-papers'" | sort: "date" | reverse %}
+{% for post in wps %}
+  {% include archive-single.html %}
+{% endfor %}
+
+<hr>
+
+<h2 id="wip">Selected Work in Progress</h2>
+{% assign wip = site.research | where_exp: "item", "item.categories contains 'wip'" | sort: "date" | reverse %}
+{% for post in wip %}
+  {% include archive-single.html %}
+{% endfor %}
