--- a/_pages/research.html
+++ b/_pages/research.html
@@ -7,6 +7,8 @@ entries_layout: list
 show_excerpts: true
 ---
 
+{% include base_path %}   {# <<< THIS LINE ENABLES CORRECT CSS/ASSET PATHS #}
+
 <h2 id="publications">Publications</h2>
 {% assign pubs = site.research | where_exp: "item", "item.categories contains 'publications'" | sort: "date" | reverse %}
 {% for post in pubs %}
