deploy: b8b258adc64a3b5f1b920fcac43ce6e91dd3416c

--- a/research/robot-lonely/index.html
+++ b/research/robot-lonely/index.html
@@ -1,1 +1,3 @@
-<p>(You can put a longer abstract here if you want.)</p>
+<p>This work contributes to answering the question of when the lonely (vs. non-lonely) would be more or less likely to bond with robotic companions to fulfill social needs. We investigate the joint effect of users’ levels of loneliness (human-side influencing factor) and robot dominance (robot-side influencing factor) on users’ attitudes toward companion robots.</p>
+
+<p>Six studies reveal that individuals experiencing greater loneliness hold generally less favorable attitudes toward the idea of adopting robotic companionship. However, lonelier individuals show a higher inclination to bond with robots that act <strong>submissive rather than dominant</strong> ones.</p>
