--- a/_pages/research.html
+++ b/_pages/research.html
@@ -1,7 +1,7 @@
 ---
 title: "Research"
 permalink: /research/
-layout: archive
+layout: page
 author_profile: true
 entries_layout: list
 show_excerpts: true
