--- a/research/index.html
+++ b/research/index.html
@@ -6,7 +6,10 @@
   <article class="archive__item" itemscope itemtype="https://schema.org/CreativeWork"><div class="archive__item-teaser">
       <img src="/images/lonely-human.jpg" alt="">
     </div><div class="archive__item-body"><h2 class="archive__item-title" itemprop="headline">Lonely human and dominant robot: similarity versus complementary attraction</h2><p class="page__meta"><i class="far fa-calendar-alt" aria-hidden="true"></i>
-          <span>May 01, 2024</span><span> • Psychology & Marketing, 41(5), 1133–1151</span><span> • with Xiucheng Fan</span></p><p class="archive__item-excerpt" itemprop="description">This work investigates how loneliness (human-side factor) and robot dominance  (robot-side factor) shape people’s attitudes toward adopting companion robots.
+          <span>May 01, 2024</span><span> • Psychology & Marketing, 41(5), 1133–1151</span><span> • with Xiucheng Fan</span></p><p class="archive__item-excerpt" itemprop="description">This work investigates how loneliness (human-side factor) and robot dominance (robot-side factor)
+shape people’s attitudes toward adopting companion robots. Across six studies, we show that
+greater loneliness generally lowers adoption attitudes toward robotic companionship, yet
+lonelier individuals display a stronger inclination to bond with submissive (vs. dominant) robots.
 </p><p class="archive__item-excerpt"><a href="https://doi.org/10.1002/mar.21975" target="_blank" rel="noopener">[paper]</a></p></div>
 </article>
 
