--- a/research/2024-robot-lonely/index.html
+++ b/research/2024-robot-lonely/index.html
@@ -1,3 +1,5 @@
+<p><a href="https://doi.org/10.1002/mar.21975">paper</a></p>
+
 <p>This work contributes to answering the question of when the lonely (vs. non-lonely) would be more or less likely
 to bond with robotic companions to fulfill social needs. We investigate the joint effect of users’ levels of
 loneliness (human-side influencing factor) and robot dominance (robot-side influencing factor) on users’ attitudes
