deploy: cb36913a2250d78e6d4cd46b8790c42a0e92281a

--- a/research/index.html
+++ b/research/index.html
@@ -315,7 +315,7 @@ superior products regardless of relationship context.</p>
 <h2 id="working-papers">Working Papers</h2>
 
 <article class="archive__item" itemscope="" itemtype="https://schema.org/CreativeWork">
-    <h2 class="archive__item-title no_toc">Sharing happiness later yields more happiness</h2>  {# &lt;-- plain text, NOT a link #}
+    <h2 class="archive__item-title no_toc">Sharing happiness later yields more happiness</h2>  <!-- plain text, NOT a link -->
     
       <div class="archive__item-excerpt" itemprop="description">
         <p>with Bowen Ruan and Bingyan Hu, under review at <em>Journal of Consumer Research</em></p>
@@ -330,7 +330,7 @@ predicting it will yield greater happiness.</p>
   </article>
 
 <article class="archive__item" itemscope="" itemtype="https://schema.org/CreativeWork">
-    <h2 class="archive__item-title no_toc">All add-on fees are not the same: consumers’ aversion to “opaque” fees</h2>  {# &lt;-- plain text, NOT a link #}
+    <h2 class="archive__item-title no_toc">All add-on fees are not the same: consumers’ aversion to “opaque” fees</h2>  <!-- plain text, NOT a link -->
     
       <div class="archive__item-excerpt" itemprop="description">
         <p>with Bowen Ruan and Bingyan Hu, under review at <em>Journal of Consumer Research</em></p>
