deploy: 6f7e99841efe07261ab72e676936d080f0ac4dd5

--- a/research/index.html
+++ b/research/index.html
@@ -345,6 +345,20 @@ predicting it will yield greater happiness.</p>
 
 <h2 id="selected-work-in-progress">Selected Work in Progress</h2>
 
+<article class="archive__item" itemscope="" itemtype="https://schema.org/CreativeWork">
+    <h2 class="archive__item-title no_toc">The honesty gap in feedback seeking</h2>  <!-- plain text, NOT a link -->
+    
+      <div class="archive__item-excerpt" itemprop="description">
+        <p>with Rajagopal Raghunathan and Andrew Gershoff</p>
+
+<p>This project investigates the intention–action gap in feedback seeking, where people say they want honest but critical feedback yet often choose supportive but 
+politely dishonest feedback instead. We examine why this reluctance to seek or accept honest feedback is greater than anticipated and explore its implications 
+for decision-making and interpersonal dynamics.</p>
+
+      </div>
+    
+  </article>
+
 
   </div>
 </div>
