deploy: 731a8705ccdf83cb05cbf1a9e45f1a628c77054c

--- a/sitemap/index.html
+++ b/sitemap/index.html
@@ -1451,8 +1451,9 @@ superior products regardless of relationship context.</p>
         
 
     
-    <p class="archive__item-excerpt" itemprop="description"><p>with Susan M. Broniarczyk
-Gift giving often creates a mismatch—givers prefer fun, impressive gifts while recipients value practical ones. Across scenario 
+    <p class="archive__item-excerpt" itemprop="description"><p>with Susan M. Broniarczyk</p>
+
+<p>Gift giving often creates a mismatch—givers prefer fun, impressive gifts while recipients value practical ones. Across scenario 
 and recall studies, we show that group gifting shifts givers toward utilitarian choices. Shared responsibility raises the need for 
 justification, making practical gifts easier to select.</p>
 </p>
