--- a/research/index.html
+++ b/research/index.html
@@ -376,8 +376,9 @@ for decision-making and interpersonal dynamics.</p>
     <h2 class="archive__item-title no_toc">Giving Together, Choosing Practical: Group Gifting Increases Preference for Utilitarian over Hedonic Gifts</h2>  <!-- plain text, NOT a link -->
     
       <div class="archive__item-excerpt" itemprop="description">
-        <p>with Susan M. Broniarczyk
-Gift giving often creates a mismatch—givers prefer fun, impressive gifts while recipients value practical ones. Across scenario 
+        <p>with Susan M. Broniarczyk</p>
+
+<p>Gift giving often creates a mismatch—givers prefer fun, impressive gifts while recipients value practical ones. Across scenario 
 and recall studies, we show that group gifting shifts givers toward utilitarian choices. Shared responsibility raises the need for 
 justification, making practical gifts easier to select.</p>
 
