deploy: feeca70fa7c45d6c5346d7fc80a2b18afe2e65c7

--- a/collection-archive/index.html
+++ b/collection-archive/index.html
@@ -761,8 +761,9 @@ for decision-making and interpersonal dynamics.</p>
         
 
     
-    <p class="archive__item-excerpt" itemprop="description"><p>with Adrian F. Ward
-This research examines how the real-time interactivity of live commerce alters consumer 
+    <p class="archive__item-excerpt" itemprop="description"><p>with Adrian F. Ward</p>
+
+<p>This research examines how the real-time interactivity of live commerce alters consumer 
 perceptions compared to traditional e-commerce. We test the pure liveness effect, showing 
 that it reduces perceived product uncertainty and, in turn, increases purchase intentions.</p>
 </p>
