--- a/research/index.html
+++ b/research/index.html
@@ -349,8 +349,9 @@ predicting it will yield greater happiness.</p>
     <h2 class="archive__item-title no_toc">The pure liveness effect: reducing product uncertainty in live commerce</h2>  <!-- plain text, NOT a link -->
     
       <div class="archive__item-excerpt" itemprop="description">
-        <p>with Adrian F. Ward
-This research examines how the real-time interactivity of live commerce alters consumer 
+        <p>with Adrian F. Ward</p>
+
+<p>This research examines how the real-time interactivity of live commerce alters consumer 
 perceptions compared to traditional e-commerce. We test the pure liveness effect, showing 
 that it reduces perceived product uncertainty and, in turn, increases purchase intentions.</p>
 
