deploy: bdfcc3d7a0bd7f9b9f939d18cab7f8f32ccf4317

--- a/teaching/integrated-marketing/index.html
+++ b/teaching/integrated-marketing/index.html
@@ -276,8 +276,8 @@
 <h1 id="heading-1">Heading 1</h1>
 
 <h1 id="heading-2">Heading 2</h1>
-
-<h1 id="heading-3">Heading 3</h1>
+<p>Heading 3
+======</p>
 
 
         
