--- a/cv/index.html
+++ b/cv/index.html
@@ -253,32 +253,24 @@
     
 <h1 id="education">Education</h1>
 <ul>
-  <li>Ph.D in Version Control Theory, GitHub University, 2018 (expected)</li>
-  <li>M.S. in Jekyll, GitHub University, 2014</li>
-  <li>B.S. in GitHub, GitHub University, 2012</li>
-</ul>
-
-<h1 id="work-experience">Work experience</h1>
-<ul>
-  <li>Spring 2024: Academic Pages Collaborator
+  <li>University of Texas at Austin (USA)
     <ul>
-      <li>GitHub University</li>
-      <li>Duties includes: Updates and improvements to template</li>
-      <li>Supervisor: The Users</li>
+      <li>Ph.D. in Marketing, McCombs School of Business, 2028 (expected)</li>
     </ul>
   </li>
-  <li>Fall 2015: Research Assistant
+  <li>Fudan University (China)
     <ul>
-      <li>GitHub University</li>
-      <li>Duties included: Merging pull requests</li>
-      <li>Supervisor: Professor Hub</li>
+      <li>Researh Training, Management, School of Management, 2021</li>
     </ul>
   </li>
-  <li>Summer 2015: Research Assistant
+  <li>University of Iowa (USA)
     <ul>
-      <li>GitHub University</li>
-      <li>Duties included: Tagging issues</li>
-      <li>Supervisor: Professor Git</li>
+      <li>Visiting Scholar, Marketing, Tippie College of Business, 2020</li>
+    </ul>
+  </li>
+  <li>Xiamen University (China)
+    <ul>
+      <li>Bachelor of Economics, School of Economics, 2014</li>
     </ul>
   </li>
 </ul>
