--- a/cv/index.html
+++ b/cv/index.html
@@ -399,7 +399,7 @@
       
     </h3>
     
-    <p class="archive__item-excerpt" itemprop="description">Yu, L., &amp; Fan, X. (2024). <i>Psychology &amp; Marketing, </i>. 41(5).1133-1151</p> 
+    <p class="archive__item-excerpt" itemprop="description">Yu, L., &amp; Fan, X. (2024). <i>Psychology &amp; Marketing, </i>41(5),1133-1151.</p> 
     </li>
  </article>
 </div>
