deploy: 67f397fa8f76d6ecfeb7d7d3f4354e79dbb6654c

--- a/teaching/design-thinking/index.html
+++ b/teaching/design-thinking/index.html
@@ -23,7 +23,7 @@
 
 
 
-<meta name="description" content="with Prof. Rajagopal Raghunathan, Fall 2023, Fall 2024, Fall 2025.">
+<meta name="description" content="Teaching Assistant to Prof. Rajagopal Raghunathan, Fall 2023, Fall 2024, Fall 2025">
 
 
 
@@ -69,7 +69,7 @@
 <meta property="og:title" content="Design Thinking for Business Innovation">
 
 
-  <meta property="og:description" name="description" content="with Prof. Rajagopal Raghunathan, Fall 2023, Fall 2024, Fall 2025.">
+  <meta property="og:description" name="description" content="Teaching Assistant to Prof. Rajagopal Raghunathan, Fall 2023, Fall 2024, Fall 2025">
 
 
   <meta property="og:url" content="https://lingzhi-yu.github.io/teaching/design-thinking/">
@@ -252,7 +252,7 @@
 
   <article class="page" itemscope itemtype="http://schema.org/CreativeWork">
     <meta itemprop="headline" content="Design Thinking for Business Innovation">
-    <meta itemprop="description" content="with Prof. Rajagopal Raghunathan, Fall 2023, Fall 2024, Fall 2025.">
+    <meta itemprop="description" content="Teaching Assistant to Prof. Rajagopal Raghunathan, Fall 2023, Fall 2024, Fall 2025">
     
     
 
