--- a/teaching/index.html
+++ b/teaching/index.html
@@ -258,7 +258,7 @@
     <h2 class="archive__item-title no_toc">Design Thinking for Business Innovation</h2>
     
       <div class="archive__item-excerpt" itemprop="description">
-        <p>with Prof. Rajagopal Raghunathan, Fall 2023, Fall 2024, Fall 2025.</p>
+        <p>Teaching Assistant to Prof. Rajagopal Raghunathan, Fall 2023, Fall 2024, Fall 2025</p>
 
       </div>
     
