--- a/teaching/index.html
+++ b/teaching/index.html
@@ -278,7 +278,7 @@
     <h2 class="archive__item-title no_toc">The Science of Good Business</h2>
     
       <div class="archive__item-excerpt" itemprop="description">
-        <p>with Prof. Amit Kumar, Spring 2024.</p>
+        <p>Teaching Assistant to Prof. Amit Kumar, Spring 2024</p>
 
       </div>
     
