--- a/teaching/good-business/index.html
+++ b/teaching/good-business/index.html
@@ -23,7 +23,7 @@
 
 
 
-<meta name="description" content="with Prof. Amit Kumar, Spring 2024.">
+<meta name="description" content="Teaching Assistant to Prof. Amit Kumar, Spring 2024">
 
 
 
@@ -69,7 +69,7 @@
 <meta property="og:title" content="The Science of Good Business">
 
 
-  <meta property="og:description" name="description" content="with Prof. Amit Kumar, Spring 2024.">
+  <meta property="og:description" name="description" content="Teaching Assistant to Prof. Amit Kumar, Spring 2024">
 
 
   <meta property="og:url" content="https://lingzhi-yu.github.io/teaching/good-business/">
@@ -252,7 +252,7 @@
 
   <article class="page" itemscope itemtype="http://schema.org/CreativeWork">
     <meta itemprop="headline" content="The Science of Good Business">
-    <meta itemprop="description" content="with Prof. Amit Kumar, Spring 2024.">
+    <meta itemprop="description" content="Teaching Assistant to Prof. Amit Kumar, Spring 2024">
     
     
 
