deploy: 62872fe63445361e82b03dd6def73b9b3faf862a

--- a/teaching/index.html
+++ b/teaching/index.html
@@ -268,7 +268,7 @@
     <h2 class="archive__item-title no_toc">Integrated Marketing Communications</h2>
     
       <div class="archive__item-excerpt" itemprop="description">
-        <p>with Prof. Wayne Hoyer, Spring 2025</p>
+        <p>Teaching Assistant to Prof. Wayne Hoyer, Spring 2025</p>
 
       </div>
     
