--- a/teaching/integrated-marketing/index.html
+++ b/teaching/integrated-marketing/index.html
@@ -23,7 +23,7 @@
 
 
 
-<meta name="description" content="with Prof. Wayne Hoyer, Spring 2025">
+<meta name="description" content="Teaching Assistant to Prof. Wayne Hoyer, Spring 2025">
 
 
 
@@ -69,7 +69,7 @@
 <meta property="og:title" content="Integrated Marketing Communications">
 
 
-  <meta property="og:description" name="description" content="with Prof. Wayne Hoyer, Spring 2025">
+  <meta property="og:description" name="description" content="Teaching Assistant to Prof. Wayne Hoyer, Spring 2025">
 
 
   <meta property="og:url" content="https://lingzhi-yu.github.io/teaching/integrated-marketing/">
@@ -252,7 +252,7 @@
 
   <article class="page" itemscope itemtype="http://schema.org/CreativeWork">
     <meta itemprop="headline" content="Integrated Marketing Communications">
-    <meta itemprop="description" content="with Prof. Wayne Hoyer, Spring 2025">
+    <meta itemprop="description" content="Teaching Assistant to Prof. Wayne Hoyer, Spring 2025">
     
     
 
