--- a/cv/index.html
+++ b/cv/index.html
@@ -270,11 +270,13 @@
   </li>
   <li>Xiamen University (China)
     <ul>
-      <li>Bachelor of Economics, School of Economics, 2014
-Publications and Working Papers
-======</li>
+      <li>Bachelor of Economics, School of Economics, 2014</li>
     </ul>
   </li>
+</ul>
+
+<h1 id="publications-and-working-papers">Publications and Working Papers</h1>
+<ul>
   <li>Yu, L., &amp; Fan, X. (2024), “Lonely human and dominant robot: Similarity versus
 complementary attraction,” Psychology &amp; Marketing, 41(5), 1133-1151. doi:
 10.1002/mar.21975</li>
@@ -284,9 +286,11 @@ gift choices,” Asia Pacific Journal of Marketing and Logistics, 33(8), 1723-17
   <li>Ruan, B., Yu, L., &amp; Hu, B., “The happiness of withholding happiness,” manuscript
 development in progress.</li>
   <li>Yu, L., &amp; Fan, X., “Quantity matters: how online social interaction affects loneliness
-before and during COVID-19,” manuscript development in progress.
-Conference Presentations (*denotes presenter)
-======</li>
+before and during COVID-19,” manuscript development in progress.</li>
+</ul>
+
+<h1 id="conference-presentations-denotes-presenter">Conference Presentations (*denotes presenter)</h1>
+<ul>
   <li>Ruan, B., Yu, L.*, &amp; Hu, B. (March 2022) “The Happiness of Withholding Happiness.”
 Paper presented at the Society for Consumer Psychology (SCP) Conference, Virtual.</li>
   <li>Ruan, B., Yu, L.*, &amp; Hu, B. (October 2021) “The Happiness of Withholding Happiness.”
@@ -295,14 +299,18 @@ Paper presented at the Association for Consumer Research (ACR) Conference, Virtu
 Emotional for Exchange: How Relational Norms Influence Gift Choices.” Poster presented
 at the Association for Consumer Research (ACR) Conference, Atlanta, GA.</li>
   <li>Yu, L., &amp; Fan, X., “Quantity matters: how online social interaction affects loneliness
-before and during COVID-19,” manuscript development in progress.
-Honors and Grants
-======</li>
+before and during COVID-19,” manuscript development in progress.</li>
+</ul>
+
+<h1 id="honors-and-grants">Honors and Grants</h1>
+<ul>
   <li>Outstanding Graduate Assistant, Fudan University, 2019</li>
   <li>China National Scholarship for Graduates, Government of China, 2015</li>
-  <li>China National Scholarship for Undergraduates, Government of China, 2012
-Teaching and Advising
-======</li>
+  <li>China National Scholarship for Undergraduates, Government of China, 2012</li>
+</ul>
+
+<h1 id="teaching-and-advising">Teaching and Advising</h1>
+<ul>
   <li>Teaching Assistant: McCombs School of Business, University of Texas at Austin
     <ul>
       <li>The Science of Good Business (MBA), 2024</li>
@@ -328,11 +336,11 @@ Teaching and Advising
 <h1 id="internship-experiences">Internship Experiences</h1>
 <ul>
   <li>Assistant Data Analyst, Orient Securities, Shanghai, China, 2015.11-2016.02</li>
-  <li>Customer Service Assistant, ICBC, Zhejiang, China, 2013.07-2013.09
-Technical Skills
-======
-STATA; SPSS; Qualtrics; Microsoft Office including Word, Excel, and PowerPoint</li>
+  <li>Customer Service Assistant, ICBC, Zhejiang, China, 2013.07-2013.09</li>
 </ul>
+
+<h1 id="technical-skills">Technical Skills</h1>
+<p>STATA; SPSS; Qualtrics; Microsoft Office including Word, Excel, and PowerPoint</p>
 
   </div>
 </div>
