deploy: d19064539d4ee8bcb560ed698e25e5cee0b0ce38

--- a/research/index.html
+++ b/research/index.html
@@ -398,7 +398,7 @@ for decision-making and interpersonal dynamics.</p>
   </article>
 
   <article class="archive__item" itemscope="" itemtype="https://schema.org/CreativeWork">
-    <h2 class="archive__item-title no_toc">Giving Together, Choosing Practical: Group Gifting Increases Preference for Utilitarian over Hedonic Gifts</h2>
+    <h2 class="archive__item-title no_toc">Giving together, choosing practical: group gifting increases preference for utilitarian over hedonic gifts</h2>
     
       <div class="archive__item-excerpt" itemprop="description">
         <p>with Susan M. Broniarczyk</p>
