--- a/sitemap/index.html
+++ b/sitemap/index.html
@@ -1441,7 +1441,7 @@ superior products regardless of relationship context.</p>
 
     <h2 class="archive__item-title" itemprop="headline">
       
-        <a href="https://lingzhi-yu.github.io/research/wip-giving-together/" rel="permalink">Giving Together, Choosing Practical: Group Gifting Increases Preference for Utilitarian over Hedonic Gifts
+        <a href="https://lingzhi-yu.github.io/research/wip-giving-together/" rel="permalink">Giving together, choosing practical: group gifting increases preference for utilitarian over hedonic gifts
 </a>
       
     </h2>
